--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
 
             <h2>Info</h2>
             <ul class="paper">
-                <li><u><a href="Resume.pdf20220101-1-zxawqs20220101-1-1ro9kmx.pdf">Resume</a></u></li>
+                <li><u><a href="https://online.flippingbook.com/view/900553045/">Resume</a></u></li>
             </ul>
         </div>
     </body>
