--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
 
             <h2>Info</h2>
             <ul class="paper">
-                <li><u><a href="https://drive.google.com/drive/u/0/my-drive">Resume</a></u></li>
+                <li><u><a href="https://drive.google.com/file/d/1x2cyyAYG3CYFo4qd5vXgYeX9fB0keW4C/view?usp=sharing">Resume</a></u></li>
             </ul>
         </div>
     </body>
